syntax = "proto3";

package booking;

option java_package = "com.github.j4c62.pms.booking.infrastructure.adapter.entrypoint";
option java_outer_classname = "BookingProto";
option java_multiple_files = true;

/**
 * BookingService defines RPC operations to create and cancel bookings.
 */
service BookingService {
  rpc CreateBooking(CreateBookingRequest) returns (BookingResponse);
  rpc CancelBooking(CancelBookingRequest) returns (BookingResponse);
}

/** Request for creating a booking */
message CreateBookingRequest {
  string propertyId = 1;
  string guestId = 2;
  string startDate = 3;
  string endDate = 4;
}

/** Request for cancelling a booking */
message CancelBookingRequest {
  string bookingId = 1;
}

message UpdateBookingRequest {
  string startDate = 1;
  string endDate = 3;
}

/** Response containing booking status */
message BookingResponse {
  string bookingId = 1;
  string status = 2;
}
